Fix vertical alignment of Facebook Like button

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -266,6 +266,7 @@ Layout for single post pages
 }
 
 .twitter-share-button { vertical-align: bottom; }
+.fb-like span { height: 20px !important; }
 
 #postscript {
   /* background-color: $white; */
